load tutor sessions from backend on page load and refresh
Fixed calendar

--- a/FrontEnd/ValedictorianFE/HTML/calendar.html
+++ b/FrontEnd/ValedictorianFE/HTML/calendar.html
@@ -10,7 +10,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.12/typed.min.js"></script>
-        <script src="../JS/calendar.js" defer></script>
+        <script type="module" src="../JS/calendar.js"></script>
 
     </head>
     <body>
@@ -76,17 +76,18 @@
                                     <label class="form-label">Which module do you need help with?</label>
                                     <select class="form-select" id="module-select">
                                         <option value="">Choose a module...</option>
-                                        <option value="computer-science">Computer Science</option>
-                                        <option value="artificial-intelligence">Artificial Intelligence</option>
-                                        <option value="cybersecurity">Cybersecurity</option>
-                                        <option value="data-science">Data Science</option>
-                                        <option value="software-engineering">Software Engineering</option>
-                                        <option value="cloud-computing">Cloud Computing</option>
-                                        <option value="digital-business">Digital Business</option>
-                                        <option value="iot-embedded">IoT & Embedded Systems</option>
-                                        <option value="mathematics">Mathematics</option>
-                                        <option value="statistics">Statistics</option>
+                                        <option value="1">Computer Science</option>
+                                        <option value="2">Artificial Intelligence</option>
+                                        <option value="3">Cybersecurity</option>
+                                        <option value="4">Data Science</option>
+                                        <option value="5">Software Engineering</option>
+                                        <option value="6">Cloud Computing</option>
+                                        <option value="7">Digital Business</option>
+                                        <option value="8">IoT & Embedded Systems</option>
+                                        <option value="9">Mathematics</option>
+                                        <option value="10">Statistics</option>
                                     </select>
+
                                 </div>
                                 <div class="form-navigation">
                                     <div></div>
