Fix message rendering and API model alignment
fixed chats

--- a/FrontEnd/ValedictorianFE/HTML/messaging.html
+++ b/FrontEnd/ValedictorianFE/HTML/messaging.html
@@ -34,7 +34,7 @@
                     <div class="chat-header" id="chatHeader">
                         <div class="chat-header-info">
                             <div class="avatar">
-                                <img src="https://via.placeholder.com/45" alt="Avatar" id="currentChatAvatar">
+                                <img src="../assets/default-avatar.png" alt="Avatar" id="currentChatAvatar">
                             </div>
                             <div class="chat-info">
                                 <h3 id="currentChatName">Select a chat</h3>
@@ -82,6 +82,6 @@
             </div>
         </section>
 
-        <script src="../JS/messaging.js"></script>
+        <script type="module" src="../JS/messaging.js"></script>
     </body>
 </html>
