Fixed what needs fixing

--- a/FrontEnd/ValedictorianFE/HTML/post.html
+++ b/FrontEnd/ValedictorianFE/HTML/post.html
@@ -26,7 +26,7 @@
                     <a href="../HTML/contact.html" class="nav-link" target="_self">Contact</a>
                     <a href="../HTML/about.html" class="nav-link" target="_self">About</a>
                 </div>
-            </div>
+            </div> 
         </div>
     </nav>
 
@@ -119,7 +119,7 @@
                         <div class="author-avatar">JD</div>
                         <span style="color: var(--text-dark); font-weight: 500;">Add a comment</span>
                     </div>
-                    <form class="comment-form" onsubmit="submitComment(event)">
+                    <form class="comment-form" ">
                         <textarea 
                             class="comment-textarea" 
                             placeholder="What are your thoughts?"
